Completed and corrected translation
Some of the Polish words were wrong, so I corrected them and named some stuff the way it's called in Civilization V.

--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -5,8 +5,7 @@ Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup =
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Załóż miasto! \n>Wybierz Osadnika (ikona flagi) \n>Wybierz akcję 'Załóż miasto' (lewy dolny róg)
 Enter the city screen!\nClick the city button twice = Przejdź do panelu miasta! \n>Kliknij dwukrotnie na Miasto
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Wybierz technologię do odkrycia!\n>Wciśnij przycisk Wybierz Technologię (zielonawy, na górze po lewej) \n>Wybierz technologię a następnie wciśnij 'Opracuj'
- # Requires translation!
-Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
+Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = Wybierz budowę \nWejdź do ekranu miasta > Kliknij na jednostkę lub budowlę (na dole po lewej) > \nKliknij 'Dodaj do kolejki'
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Zakończ turę! \n>Przejdź przez jednostki klikając 'Następna jednostka' \n>Wciśnij 'Następna tura'
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Zmień pracujące pola!\n>Przejdź do panelu Miasta \n>Wskaż przypisane (zielone) pole by odznaczyć \n>Wskaż pole by przydzielić obywateli
 Meet another civilization!\nExplore the map until you encounter another civilization! = Spotkaj inną cywilizację! \n>Eksploruj świat do momentu napotkania nowej cywilizacji!
@@ -29,7 +28,7 @@ Indicates the capital city = Wskazuje stolicę
 
 Monument = Pomnik
 Granary = Spichlerz
-Stone Works = Kamieniarz
+Stone Works = Kamieniołom
 Must not be on plains = Nie może być na równinach
 
 Stonehenge = Stonehenge
@@ -62,10 +61,8 @@ Colossus = Kolos Rodyjski
 
 Temple = Świątynia
 Burial Tomb = Grobowiec
- # Requires translation!
-Doubles Gold given to enemy if city is captured = 
- # Requires translation!
-Mud Pyramid Mosque = 
+Doubles Gold given to enemy if city is captured = Podwaja przeciwnikowi złoto, jeśli miasto jest zdobyte
+Mud Pyramid Mosque = Meczet z piramidą
 
 The Oracle = Wyrocznia
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 'Starożytna Wyrocznia powiedziała, że jestem najmądrzejszym z Greków. Bo tylko ja ze wszystkich Greków wiem, że nic nie wiem.' - Sokrates
@@ -93,14 +90,14 @@ Can only be built in annexed cities = Budowa możliwa tylko w okupowanych miasta
 Stable = Stajnia
 +15% Production when building Mounted Units in this city = +15% do produkcji jednostek kawalerii w tym mieście
 
-Circus Maximus = Cyrk maksymalny
+Circus Maximus = Circus Maximus
 
 Hanging Gardens = Wiszące Ogrody
 'I think that if ever a mortal heard the word of God it would be in a garden at the cool of the day.'  - F. Frankfort Moore = 'Gdyby śmiertelnik usłyszał głos Pana Boga, znalazłby w sadzie wraz z wiatren dniowym.' - F. Frankfort Moore
 
 Colosseum = Koloseum
 
-Terracotta Army = Armia z terakoty
+Terracotta Army = Terakotowa Armia
 'Regard your soldiers as your children, and they will follow you into the deepest valleys; look on them as your own beloved sons, and they will stand by you even unto death.'  - Sun Tzu = 'Traktuj swoich żołnierzy jak ukochane dzieci, a z chęcią zginą wraz z Tobą.' - Sun Tzu
 
 Market = Targowisko
@@ -295,22 +292,14 @@ Requires a [buildingName] in this city = Wymaga budynku [buildingName] w tym mie
 Requires [resource] = Wymaga surowca [resource]
 Required tech: [requiredTech] = Wymaga odkrycia technologii [requiredTech]
 
- # Requires translation!
-Current construction = 
- # Requires translation!
-Construction queue = 
- # Requires translation!
-Pick a construction = 
- # Requires translation!
-Queue empty = 
- # Requires translation!
-Add to queue = 
- # Requires translation!
-Remove from queue = 
- # Requires translation!
-Show stats drilldown = 
- # Requires translation!
-Show construction queue = 
+Current construction = Bieżąca budowa
+Construction queue = Kolejka budowy
+Pick a construction = Wybierz budowę
+Queue empty = Pusta kolejka
+Add to queue = Dodaj do kolejki
+Remove from queue = Usuń z kolejki
+Show stats drilldown = Pokaż statystyki miasta
+Show construction queue = Pokaż kolejkę budowy
 
 Diplomacy = Dyplomacja
 War = Wojna
@@ -321,8 +310,7 @@ Declare war on [civName]? = Wypowiedz wojnę cywilizacji [civName]
 [leaderName] of [nation] = [leaderName], [nation]
 You'll pay for this! = Zapłacisz za swą zuchwałość!
 Negotiate Peace = Negocjuj pokój
- # Requires translation!
-Peace with [civName]? = 
+Peace with [civName]? = Pokój z [civName]
 Very well. = Niech tak będzie.
 Farewell. = Żegnaj.
 Sounds good! = Bardzo dobrze!
@@ -381,54 +369,30 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
- # Requires translation!
-Manila = 
- # Requires translation!
-Kuala Lumpur = 
- # Requires translation!
-Helsinki = 
- # Requires translation!
-Quebec City = 
- # Requires translation!
-Hanoi = 
- # Requires translation!
-Kathmandu = 
- # Requires translation!
-Cape Town = 
- # Requires translation!
-Sydney = 
- # Requires translation!
-Zanzibar = 
- # Requires translation!
-Singapore = 
- # Requires translation!
-Edinburgh = 
- # Requires translation!
-Almaty = 
- # Requires translation!
-Sidon = 
- # Requires translation!
-Kabul = 
- # Requires translation!
-Brussels = 
- # Requires translation!
-Venice = 
- # Requires translation!
-Genoa = 
- # Requires translation!
-Ur = 
- # Requires translation!
-Tyre = 
- # Requires translation!
-Dublin = 
- # Requires translation!
-Antwerp = 
- # Requires translation!
-Rio de Janeiro = 
- # Requires translation!
-Florence = 
- # Requires translation!
-Milan = 
+Manila = Manila
+Kuala Lumpur = Kuala Lumpur
+Helsinki = Helsinki
+Quebec City = Quebec
+Hanoi = Hanoi
+Kathmandu = Katmandu
+Cape Town = Kapsztad
+Sydney = Sydney
+Zanzibar = Zanzibar
+Singapore = Singapur
+Edinburgh = Edynburg
+Almaty = Ałmaty
+Sidon = Kada Sydon
+Kabul = Kabul
+Brussels = Bruksela
+Venice = Wenecja
+Genoa = Genoa
+Ur = Ur
+Tyre = Tyr
+Dublin = Dublin
+Antwerp = Antwerpia
+Rio de Janeiro = Rio de Janeiro
+Florence = Florencja
+Milan = Milan
 
 Provides [amountOfCulture] culture at 30 Influence = Dodaje [amountOfCulture] kultury przy Wpływie równym 30
 Provides 3 food in capital and 1 food in other cities at 30 Influence = Dodaje 3 jednostki żywności w stolicy i 1 jednostkę w innych miastach przy poziomie Wpływów równym 30
@@ -441,8 +405,8 @@ Cultured = Wykształcony
 Maritime = Nadmorski
 Mercantile = Handlowy
 Militaristic = Militarny
-Type:  = Rodzaj
-Influence:  = Wpływ
+Type:  = Rodzaj:
+Influence:  = Wpływ:
 Reach 30 for friendship. = Zdobądź 30 dla przyjaźni.
 Reach highest influence above 60 for alliance. = Osiągnij wpływ powyżej 60 dla sojuszu.
 Ally:  = Sojusznik: 
@@ -569,7 +533,7 @@ Isabella = Izabella
 
 Uniques = Unikalne jednostki
 Promotions = Awanse
-Barbarians = Barbażyńcy
+Barbarians = Barbarzyńcy
 Load copied data = Wczytaj skopiowane dane
 Could not load game from clipboard! = Nie można wczytać danych ze schowka!
 Start game! = Zacznij grę!
@@ -579,14 +543,10 @@ Map type = Rodzaj mapy
 Generated = Wygenerowane
 Existing = Istniejące
 Map generation type = Typ generowania mapy
- # Requires translation!
-Default = 
- # Requires translation!
-Pangaea = 
- # Requires translation!
-Perlin = 
- # Requires translation!
-Continents = 
+Default = Domyślny
+Pangaea = Pangea
+Perlin = Perlin
+Continents = Kontynenty
 Number of city-states = Liczba miast-państw
 One City Challenge = Wyzwanie z limitem 1 miasta
 No barbarians = Brak Barbarzyńców
@@ -621,7 +581,7 @@ AI = Komputer
 Remove = Usuń
 Random = Losowo
 Human = Gracz
-Hotseat = Gorące krzesło
+Hotseat = Hotseat
 User ID = ID użytkownika
 Click to copy = Naciśnij aby skopiować
 
@@ -771,10 +731,8 @@ We have received [goldAmount] Gold for discovering [naturalWonder] = Otrzymaliś
 Your relationship with [cityStateName] is about to degrade = Twoja relacje z [cityStateName] jest bliska degradacji
 Your relationship with [cityStateName] degraded = Twoja relacja z [cityStateName] została zdegradowana
 A new barbarian encampment has spawned! = Nowy obóz barbarzyńców został utworzony!
- # Requires translation!
-Received [goldAmount] Gold for capturing [cityName] = 
- # Requires translation!
-Our proposed trade request is no longer relevant! = 
+Received [goldAmount] Gold for capturing [cityName] = Zdobyto [goldAmount] za zdobycie [cityName]
+Our proposed trade request is no longer relevant! = Nasza propozycja handlu nie jest już ważna!
 
 # World Screen UI
 
@@ -798,8 +756,8 @@ Construct improvement = Zbuduj ulepszenie
 Automate = Zautomatyzuj
 Stop automation = Wstrzymaj automatyzacje
 Construct road = Zbuduj drogę
-Fortify = Umocnij
-Fortification = Umocnienia
+Fortify = Ufortyfikuj
+Fortification = Fortyfikacje
 Sleep = Uśpij
 Moving = W ruchu
 Set up = Przygotowane
@@ -836,8 +794,7 @@ Victory status = Status zwycięstwa
 Social policies = Ustroje społeczne
 Community = Społeczność
 Close = Zamknij
- # Requires translation!
-Do you want to exit the game? = 
+Do you want to exit the game? = Czy na pewno chcesz wyjść z gry?
 
 # City screen
 
@@ -848,7 +805,7 @@ Buy for [amount] gold = Kup za [amount] złota
 Buy = Kup
 Would you like to purchase [constructionName] for [buildingGoldCost] gold? = Czy chciałbyś kupić [constructionName] za [buildingGoldCost] złota?
 Maintenance cost = Koszt utrzymania
-Pick construction = Wybierz konstrukcję
+Pick construction = Wybierz budowę
 Pick improvement = Wybierz ulepszenie
 Provides [resource] = Dostarcza [resource]
 Replaces [improvement] = Zastępuje [improvement]
@@ -903,7 +860,7 @@ City health = Zrowie miasta
 Occupied! = Okupowane!
 Attack = Atak
 Bombard = Bombardowanie
-NUKE = BOMBARDOWANIE ATOMOWE
+NUKE = ATAK ATOMOWY
 Captured! = Zdobyte!
 defence vs ranged = obrona a obrona na odległość
 [percentage] to unit defence = [percentage] do obrony jednostki
@@ -978,17 +935,17 @@ Undefeated civs = Niepokonani obywatele
 # Capturing a city
 
 What would you like to do with the city? = Co chciałbyś zrobić z miastem?
-Annex = Przejmij
-Annexed cities become part of your regular empire. = Przejęte miasto staje się częścią twojego imperium.
+Annex = Zaantektuj
+Annexed cities become part of your regular empire. = Zaanektowane miasto staje się częścią twojego imperium.
 Their citizens generate 2x the unhappiness, unless you build a courthouse. = Obywatele miasta generują podwójn 2 razy więcej niezadowolenia, chyba że zbudujesz sąd.
-Puppet = Przygarnij 
-Puppeted cities do not increase your tech or policy cost, but their citizens generate 1.5x the regular unhappiness. = Przygarnięte miasta nie zwiększają kosztów technologi i ustrojów społecznych, ale ich mieszkańcy generują 1,5 raza więcej niezadowolenia niż zwykle.
-You have no control over the the production of puppeted cities. = Nie masz kontroli nad produkcją przygarniętych miast.
-Puppeted cities also generate 25% less Gold and Science. = Przygarnięte miasta również generują 25% mniej Złota i Nauki.
-A puppeted city can be annexed at any time. = Przygarnięte miasta mogą być przejęte w dowolnym momencie.
+Puppet = Zmarionetkuj
+Puppeted cities do not increase your tech or policy cost, but their citizens generate 1.5x the regular unhappiness. = Zmarionetkowane miasta nie zwiększają kosztów technologi i ustrojów społecznych, ale ich mieszkańcy generują 1,5 raza więcej niezadowolenia niż zwykle.
+You have no control over the the production of puppeted cities. = Nie masz kontroli nad produkcją zmarionetkowanych miast.
+Puppeted cities also generate 25% less Gold and Science. = Zmarionetkowane miasta również generują 25% mniej Złota i Nauki.
+A puppeted city can be annexed at any time. = Zmarionetkowane miasta mogą być przejęte w dowolnym momencie.
 Liberate = Wyzwól
 Liberating a city returns it to its original owner, giving you a massive relationship boost with them! = Wyzwolone miasto powraca do jego orginalnego właściciela, dając tobie ogromną premię do relacji z nim.
-Raze = Zrównaj z ziemią
+Raze = Zburz
 Razing the city annexes it, and starts razing the city to the ground. = Zrównuje miasto z ziemią, i przejmuje je.
 The population will gradually dwindle until the city is destroyed. = Populacja będzie się stopniowo zmniejszać, aż do zniszczenia miasta.
 Destroy = Zniszcz
@@ -1016,7 +973,7 @@ Defence bonus = Premia obronna
 Movement cost = Koszt przemieszczania się
 Rough Terrain = Nierówny Teren
  for  = dla 
-Missing translations: = Brakujące tłumaczenia
+Missing translations: = Brakujące tłumaczenia:
 Version = Wersja
 Resolution = Rozdzielczość
 Tileset = Pola
@@ -1034,8 +991,7 @@ Clear improvements = Wyczyść ulepszenia
 Clear resource = Wyczyść zasoby
 Requires = Wymagane
 Menu = Menu
- # Requires translation!
-Brush Size = 
+Brush Size = Rozmiar pędzla
 
 # Civilopedia Tutorials names
 
@@ -1064,8 +1020,8 @@ Available for [unitTypes] = Dostępne dla jednostki [unitTypes]
 
 # Policies
 
-Adopt policy = Adoptuj ustrój społeczny
-Adopt free policy = Adoptuj darmowy ustrój społeczny 
+Adopt policy = Wprowadź ustrój społeczny
+Adopt free policy = Wprowadź darmowy ustrój społeczny 
 Unlocked at = Odblokowana w
 
 Tradition = Tradycja
@@ -1373,7 +1329,7 @@ Mountain = Góra
 Forest = Las
 Jungle = Dżungla
 Marsh = Bagno
-Fallout = Pustkowia
+Fallout = Opad radioaktywny
 Oasis = Oaza
 Snow = Zaśnieżone
 Coast = Wybrzeże
@@ -1384,7 +1340,7 @@ Impassible = Nieosiągalna
 # Natural Wonders
 
 Barringer Crater = Krater Meteorytowy
-Grand Mesa = Wielkie Stoliwo Górskie
+Grand Mesa = Grand Mesa
 Great Barrier Reef = Wielka Rafa Koralowa
 Krakatoa = Krakatau
 Mount Fuji = Góra Fuji
@@ -1392,7 +1348,7 @@ Old Faithful = Old Faithful
 Rock of Gibraltar = Skała Gibraltarska
 Cerro de Potosi = Cerro de Potosi
 El Dorado = El Dorado
-Fountain of Youth = Źródło młodości
+Fountain of Youth = Fontanna młodości
 
 # Natural Wonders Uniques
 
@@ -1470,7 +1426,7 @@ land units = jednostki naziemne
 water units = jednostki wodne
 air units = jednostki powietrzne
 WaterCivilian = Cywilna Jednostka Morska
-Melee = Walka wręcz
+Melee = Walka w zwarciu
 WaterMelee = Wodna walka w zwarciu
 Ranged = Walka dystansowa
 WaterRanged = Wodna walka dystansowa
@@ -1487,17 +1443,17 @@ Founds a new city = Zakłada nowe miasto
 Worker = Robotnik
 Can build improvements on tiles = Może budować ulepszenia na polach
 Ignores terrain cost = Ignoruje trudności terenu
-Brute = Brutal
+Brute = Dzikus
 Warrior = Wojownik
 Maori Warrior = Wojownik Maori
 Archer = Łucznik
-Bowman = Łucznikarz
+Bowman = Łucznik babiloński
 Work Boats = Łodzie robotnicze
 Cannot enter ocean tiles until Astronomy = Nie może wejść na pole oceanu do momentu odblokowania Astronomi
 May create improvements on water resources = Może budować ulepszenia na wodnych zasobach
-Trireme = Tryrema
+Trireme = Trirema
 Cannot enter ocean tiles = Nie może wejsć na pola oceanu
-Chariot Archer = Łuczik na rydwanie
+Chariot Archer = Łuczik rydwanowy
 No defensive terrain bonus = Brak bonusów do obrony wynikających z terenu
 Rough terrain penalty = Utrudnienia wynikające z terenu
 War Chariot = Rydwan wojenny
@@ -1509,7 +1465,7 @@ Composite Bowman = Łucznik kompozytowy
 Catapult = Katapulta
 Must set up to ranged attack = Musi być przygotowany/a na atak dystansowy
 Ballista = Balista
-Swordsman = Fechtmistrz
+Swordsman = Zbrojny
 Mohawk Warrior = Wojownik Mohawk
 +33% combat bonus in Forest/Jungle = +33% bonusu do walki w Lesie/Dżungli
 Legion = Legion
@@ -1520,21 +1476,20 @@ Companion Cavalry = Kawaleria Towarzysząca
 War Elephant = Słoń bojowy
 Galleass = Galeas
 Crossbowman = Kusznik
-Longbowman = Łucznik z długim łukiem
+Longbowman = Łucznik angielski
 Chu-Ko-Nu = Chu-Ko-Nu
 Logistics = Logistyka
 1 additional attack per turn = 1 dodatkowy atak na turę
-Trebuchet = Trebuszet
-Hwach'a = Hwach'a
+Trebuchet = Trebusz
+Hwach'a = Hwacha
 Limited Visibility = Ograniczona widoczność
-Longswordsman = Fechtmistrz z długim mieczem
-Pikeman = Wojownik z piką
+Longswordsman = Ciężkozbrojny
+Pikeman = Pikinier
 Landsknecht = Landsknecht
 Knight = Rycerz
 Camel Archer = Łucznik na wielbłądzie
-Conquistador = Zdobywca
- # Requires translation!
-Mandekalu Cavalry = 
+Conquistador = Konkwistador
+Mandekalu Cavalry = Kawaleria Mandekalu
 Defense bonus when embarked = Premia obronna przy wejściu w tryb statku
 Naresuan's Elephant = Słoń Naresuan
 Samurai = Samuraj
@@ -1544,7 +1499,7 @@ Turtle Ship = Geobukseon
 +1 Visibility Range = +1 do pola widzenia
 +2 Visibility Range = +2 do pola widzenia
 Cannon = Armata
-Musketman = Strzelec z muszkietem
+Musketman = Arkebuzer
 Musketeer = Muszkieter
 Janissary = Janczar
 Tercio = Tercio
@@ -1555,7 +1510,7 @@ Ship of the Line = Okręt liniowy
 Lancer = Lansjer
 Sipahi = Spahisi
 No movement cost to pillage = Plądrowanie nie zabiera ruchu
-Gatling Gun = Kartaczownica Gatlinga
+Gatling Gun = Karabin Gatlinga
 Rifleman = Strzelec
 Cavalry = Kawaleria
 Cossack = Kozak
@@ -1587,13 +1542,13 @@ Great War Bomber = Bombowiec Wielkiej Wojny
 Rocket Artillery = Artyleria rakietowa
 Anti-Tank Gun = Działo przeciwpancerne
 Marine = Marynarka
-Mobile SAM = Mobilny SAM
+Mobile SAM = Wyrzutnia SAM
 Paratrooper = Spadochroniarz
 Tank = Czołg
 Panzer = Panzer
 Bomber = Bombowiec
 Mechanized Infantry = Piechota zmechanizowana
-Modern Armor = Nowoczesny pancerz
+Modern Armor = Nowoczesny czołg
 B17 = B-17
 Fighter = Myśliwiec
 Zero = Zero
@@ -1703,8 +1658,7 @@ Reduces damage taken from interception by 50% = Redukuje obrażenia otrzymane po
 Bonus when intercepting [amount]% = Bonus podczas przechwytywania o [amount]%
 Ambush I = Zasadzka I (lotnictwo)
 Ambush II = Zasadzka II (lotnictwo)
- # Requires translation!
-Can carry 2 aircraft = 
+Can carry 2 aircraft = Może przenieść dwa samoloty
 Haka War Dance = Haka - taniec wojenny
 -10% combat strength for adjacent enemy units = -10% walecznej siły dla jednostek przeciwnika leżących na przyległych polach
 Rejuvenation = Odnowienie
