A little correction od my mistake
"Stone works" means "Zakład kamieniarski" not "Kamieniołom

--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -28,7 +28,7 @@ Indicates the capital city = Wskazuje stolicę
 
 Monument = Pomnik
 Granary = Spichlerz
-Stone Works = Kamieniołom
+Stone Works = Zakład kamieniarski
 Must not be on plains = Nie może być na równinach
 
 Stonehenge = Stonehenge
