Russian translation update

--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -310,8 +310,7 @@ Declare war on [civName]? = Объявить войну [civName]?
 [leaderName] of [nation] = [leaderName] из [nation]
 You'll pay for this! = Вы заплатите за это!
 Negotiate Peace = Предложить мир
- # Requires translation!
-Peace with [civName]? = 
+Peace with [civName]? = Заключить мир с [civName]?
 Very well. = Очень хорошо.
 Farewell. = До встречи.
 Sounds good! = Звучит неплохо!
@@ -370,54 +369,30 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
- # Requires translation!
-Manila = 
- # Requires translation!
-Kuala Lumpur = 
- # Requires translation!
-Helsinki = 
- # Requires translation!
-Quebec City = 
- # Requires translation!
-Hanoi = 
- # Requires translation!
-Kathmandu = 
- # Requires translation!
-Cape Town = 
- # Requires translation!
-Sydney = 
- # Requires translation!
-Zanzibar = 
- # Requires translation!
-Singapore = 
- # Requires translation!
-Edinburgh = 
- # Requires translation!
-Almaty = 
- # Requires translation!
-Sidon = 
- # Requires translation!
-Kabul = 
- # Requires translation!
-Brussels = 
- # Requires translation!
-Venice = 
- # Requires translation!
-Genoa = 
- # Requires translation!
-Ur = 
- # Requires translation!
-Tyre = 
- # Requires translation!
-Dublin = 
- # Requires translation!
-Antwerp = 
- # Requires translation!
-Rio de Janeiro = 
- # Requires translation!
-Florence = 
- # Requires translation!
-Milan = 
+Manila = Манила
+Kuala Lumpur = Куалу-Лумпур
+Helsinki = Хельсинки
+Quebec City = Квебек
+Hanoi = Ханой
+Kathmandu = Катманду
+Cape Town = Кейптаун
+Sydney = Сидней
+Zanzibar = Занзибар 
+Singapore = Сингапур
+Edinburgh = Эдинбург
+Almaty = Алма-Ата
+Sidon = Сайда
+Kabul = Кабул
+Brussels = Брюссель
+Venice = Венеция
+Genoa = Генуя
+Ur = Ур
+Tyre = Сур
+Dublin = Дублин
+Antwerp = Антверпен
+Rio de Janeiro = Рио-де-Жанейро
+Florence = Флоренция
+Milan = Милан
 
 Provides [amountOfCulture] culture at 30 Influence = Даёт [amountOfCulture] культуры при 30 Влияния
 Provides 3 food in capital and 1 food in other cities at 30 Influence = Даёт 3 Еды в столице и 1 Еда в остальных городах при 30 Влияния
@@ -568,14 +543,10 @@ Map type = Тип карты
 Generated = Сгенерированная
 Existing = Существующая
 Map generation type = Тип генерации карты
- # Requires translation!
-Default = 
- # Requires translation!
-Pangaea = 
- # Requires translation!
-Perlin = 
- # Requires translation!
-Continents = 
+Default = По умолчанию
+Pangaea = Пангея
+Perlin = Перлин
+Continents = Континенты
 Number of city-states = Число городов-государств
 One City Challenge = Испытание одного города
 No barbarians = Без варваров
@@ -760,8 +731,7 @@ Your relationship with [cityStateName] is about to degrade = Ваши отнош
 Your relationship with [cityStateName] degraded = Ваши отношения с [cityStateName] ухудшились
 A new barbarian encampment has spawned! = Появился новый лагерь варваров!
 Received [goldAmount] Gold for capturing [cityName] = Получино [goldAmount] золота за захват города [cityName]
- # Requires translation!
-Our proposed trade request is no longer relevant! = 
+Our proposed trade request is no longer relevant! = Наше торговое предложение больше не актуально!
 
 # World Screen UI
 
@@ -1687,8 +1657,7 @@ Reduces damage taken from interception by 50% = Уменьшает урон от
 Bonus when intercepting [amount]% = Бонус при перехвате [amount]%
 Ambush I = Засада I
 Ambush II = Засада II
- # Requires translation!
-Can carry 2 aircraft = 
+Can carry 2 aircraft = Может транспортировать 2 авиационных единицы
 Haka War Dance = Боевой танец Маори "Хака"
 -10% combat strength for adjacent enemy units = -10% силы в сражениях за соседних вражеских юнитов
 Rejuvenation = Восстановление
