Map editor menu (#1739)
* Refactor: map size is enum

* Feature: map editor menu

* Cleanup

* Added "Empty" map generation type for the map editor

--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -977,6 +977,9 @@ Version =
 Resolution = 
 Tileset = 
 Map editor = 
+Create =
+New map = 
+Empty = 
 Language = 
 Terrains & Resources = 
 Improvements = 
