--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -369,8 +369,7 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
- # Requires translation!
-Manila = 
+Manila = Маніля
 Kuala Lumpur = Куала-Лумпур
 Helsinki = Гельсінкі
 Quebec City = Квебек
@@ -542,16 +541,12 @@ Map options = Налаштування мапи
 Game options = Налаштування гри
 Map type = Тип мапи
 Generated = Створена
-Existing = Існуюче
-Map generation type = Тип генерації мап
- # Requires translation!
-Default = 
- # Requires translation!
-Pangaea = 
- # Requires translation!
-Perlin = 
- # Requires translation!
-Continents = 
+Existing = Існуюча
+Map generation type = Тип генерації мапи
+Default = Звичайний
+Pangaea = Пангея
+Perlin = Перлин
+Continents = Континенти
 Number of city-states = Міст-держав
 One City Challenge = Випробовування «Одне місто»
 No barbarians = Без варварів
@@ -736,8 +731,7 @@ Your relationship with [cityStateName] is about to degrade = Ваші стосу
 Your relationship with [cityStateName] degraded = Ваші стосунки з [cityStateName] погіршилися
 A new barbarian encampment has spawned! = З’явився новий варварський табір!
 Received [goldAmount] Gold for capturing [cityName] = Отримано [goldAmount] золота за захоплення міста [cityName]
- # Requires translation!
-Our proposed trade request is no longer relevant! = 
+Our proposed trade request is no longer relevant! = Наша торгівельна пропозиція більше не дійсна!
 
 # World Screen UI
 
@@ -1663,8 +1657,7 @@ Reduces damage taken from interception by 50% = Пошкодження від п
 Bonus when intercepting [amount]% = При перехопленні отримує силу +[amount]%
 Ambush I = Засідка I
 Ambush II = Засідка II
- # Requires translation!
-Can carry 2 aircraft = 
+Can carry 2 aircraft = Може нести 2 літальні апарати
 Haka War Dance = Бойовий танець Гака
 -10% combat strength for adjacent enemy units = Сусідні ворожі підрозділи отримують силу атаки -10%
 Rejuvenation = Омолодження
