--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -818,6 +818,7 @@ Specialist Buildings = Edifici specialisti
 Specialist Allocation = Assegna specialisti
 Specialists = Specialisti
 Food eaten = Cibo consumato
+Excess food to production = Cibo in eccesso per produzione
 Growth bonus = Bonus crescita
 Unassigned population = Popolazione libera
 [turnsToExpansion] turns to expansion = Espansione dei confini tra [turnsToExpansion] turni
@@ -836,6 +837,9 @@ Points per turn = Punti per turno
 Convert production to gold at a rate of 4 to 1 = Converte la Produzione a Oro a un tasso di 4 a 1
 Convert production to science at a rate of 4 to 1 = Converte la Produzione a Scienza a un tasso di 4 a 1
 The city will not produce anything. = La città non produrrà nulla
+Show stats drilldown = Mostra riepilogo statistiche
+Show construction queue = Mostra coda costruzione
+
 
 # Technology UI
 
