--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -663,7 +663,7 @@ Fontset = Fontset
 Research of [technologyName] has completed! = Abbiamo scoperto la tecnologia [technologyName]!
 You have entered a golden age! = Sei entrato in un'Età dell'Oro!
 [resourceName] revealed near [cityName] = [resourceName] scoperto vicino a [cityName]
-A [greatPerson] has been born in [cityName]! = È nato un [greatPerson] a [cityName]!
+A [greatPerson] has been born in [cityName]! = È nato un [greatPerson] nella città di [cityName]!
 We have encountered [civName]! = Abbiamo incontrato il popolo [civName]!
 Cannot provide unit upkeep for [unitName] - unit has been disbanded! = Mantenimento troppo alto per [unitName]: l'unità si è sciolta!
 [cityName] has grown! = [cityName] è cresciuta!
@@ -730,7 +730,7 @@ We have received [goldAmount] Gold for discovering [naturalWonder] = Abbiamo ric
 Your relationship with [cityStateName] is about to degrade = Stai perdendo il controllo di [cityStateName]
 Your relationship with [cityStateName] degraded = Tu e [cityStateName] non siete più amici!
 A new barbarian encampment has spawned! = È sorto un nuovo accampamento barbaro!
-Received [goldAmount] Gold for capturing [cityName] = Hai ricevuto [goldAmount] per la conquista di [cityName]!
+Received [goldAmount] Gold for capturing [cityName] = Hai ricevuto [goldAmount] Oro per la conquista di [cityName]!
 Our proposed trade request is no longer relevant! = La nostra richiesta commerciale non è più rilevante!
 
 # World Screen UI
